css/main.css
/* ... */
.error span.heading,
.success span.heading {
  font-weight: 700;
  letter-spacing: .1em;
}
.error span.heading {
  color: #E60000;
}
.success span.heading {
  color: #00CC00;
}

table {}
table th {
  text-align: left;
  text-transform: uppercase;
  font-size: 90%;
  letter-spacing: .1em;
}

form {
  height: 100%;
}

.app-container {
  display: flex;
  flex-direction: row;
  height: 100%;
}
.app-playlists-wrapper {
  padding: .5em;
  overflow-x: hidden;
  overflow-y: auto;
}
.app-playlist-content-wrapper {
  padding: .5em 1em;
}

.app-separator {
  height: 100%;
  width: .25em;
  background-color: #121619;
}
.app-separator:hover {
  cursor: ew-resize;
}

.app-playlists-wrapper table td {
  white-space: nowrap;
}
.app-playlists-wrapper table td a.selected {
  font-weight: bold;
}

.playlists-wrapper {
  display: flex;
  flex-direction: row;
}

.playlist {
  flex: 1;
}
.playlist .playlist-title {
  font-size: 125%;
  font-weight: bold;
}
.playlist .table-wrapper {
  overflow-y: auto;
}
.playlist table {
  margin-top: 1em;
  border-collapse: collapse;
  width: 100%;
}
.playlist table tbody tr {
  user-select: none;
}
.playlist table tbody tr.track:hover,
.playlist table tbody tr.empty-track:hover,
.playlist table tbody tr.right-clicked {
  background-color: #eee;
}
.playlist.drag-mode table tbody tr.track:hover {
  background-color: inherit;
}
.playlist table .index {
  text-align: right;
  width: 2em;
  padding-right: 1em;
}
.playlist table .length,
.playlist table tr.delimiter td.length,
.playlist table .aggr-length,
.playlist table th.bpm,
.playlist table td.bpm {
  text-align: right;
  padding-right: 1em;
}
.playlist table td.aggr-length,
.playlist table tr.delimiter td.length {
  color: #2D4739;
}
.playlist table th.bpm,
.playlist table td.bpm {
  width: 3em;
}
.playlist table td.bpm {
  font-size: 90%;
}
.playlist table th.genre,
.playlist table td.genre {
  width: 6.25em;
}
.playlist table th.length,
.playlist table td.length,
.playlist table th.aggr-length,
.playlist table td.aggr-length {
  width: 6em;
}
.playlist table th.comments,
.playlist table td.comments {
  width: 10em;
}
.playlist table textarea.comments {
  height: 2em;
  min-height: 2em;
  resize: vertical;
  padding-top: .1em;
  padding-bottom: .1em;
  box-sizing: border-box;
}

.playlist table .summary {}
.playlist table tr.delimiter div {
  border-top: 1px solid #09814A;
  opacity: 0.5;
}
.playlist table tr.delimiter.playlist div {
  border-top-width: 5px;
}
.playlist table td.leftover {
  padding-top: 1em;
  font-weight: bold;
}
.playlist table tr.empty-track {
  font-style: italic;
}
.playlist table tr.empty-track.insert-before,
.playlist table tr.empty-track.insert-after,
.playlist table tr.empty-track.insert-before:hover,
.playlist table tr.empty-track.insert-after:hover {
  background-color: #0CA761;
}
.playlist table tr.summary .length {
  padding-top: .5em;
  font-weight: bold;
}
.playlist table td.title {
  padding: .5em 0;
}
.playlist table td.title div.artists {
  font-size: 80%;
  color: #2D4739;
}
.playlist table td.title a.preview {
  font-size: 130%;
  text-decoration: none;
  margin-left: .15em;
}
.playlist table td.title a:hover {
  color: #09814A;
}
.playlist table td.title a.playing {
  color: #0CA761;
}
.playlist table tr.playing {
  background-color: rgba(229, 198, 135, 0.4)
}
.playlist table tr.playing td.title {
  font-weight: bold;
}

.playlist table tr.selected,
.playlist.drag-mode table tr.track.selected:hover,
.playlist.drag-mode table tr.empty-track.selected:hover {
  background-color: rgba(12, 167, 97, 0.3);
}
.playlist table tr.track.selected:hover,
.playlist table tr.track.selected.right-clicked,
.playlist table tr.empty-track.selected:hover,
.playlist table tr.empty-track.selected.right-clicked {
  background-color: rgba(12, 167, 97, 0.4);
  cursor: pointer;
}

.track-overview {
  margin-top: .5em;
  display: none;
}
.track-overview + .track-overview {
  margin-top: 0;
}
.track-overview .stats {
  width: 100%;
  font-size: 80%;
}
.track-overview .bar-area {
  width: 100%;
  position: relative;
  overview-x: hidden;
}
.track-overview .bar-wrapper {
  display: inline-block;
  height: 100%;
  position: absolute;
  bottom: 0;
}
.track-overview .bar,
.track-overview .delimiter {
  display: inline-block;
  position: absolute;
  bottom: 0;
  border: 1px solid #000;
}
.track-overview .bar-wrapper.selected .bar,
.track-overview .bar-area.drag-mode .bar-wrapper.selected .bar:hover {
  background-color: #000 !important;
}
.track-overview .bar-wrapper.selected .bar:hover {
  background-color: #333 !important;
  cursor: pointer;
}
.track-overview .bar:hover {
  box-shadow: 0 0 .1em;
  z-index: 3;
}
.track-overview .bar-area.drag-mode .bar:hover {
  box-shadow: none;
}
.track-overview .delimiter {
  width: 1px;
  background-color: #09814A;
  border: 0;
  z-index: 2;
}
.track-overview .delimiter.playlist {
  width: 5px;
  transform: translateX(-2.5px);
}
.track-overview-track-info {
  position: absolute;
  top: 0;
  left: 0;
  padding: .25em .5em;
  color: #fff;
  background-color: #09814A;
  border: .1em solid #09814A;
  border-radius: .4em;
  z-index: 4;
  display: none;
}

.playback {
  height: 4em;
  width: 100%;
  background-color: #121619;
  color: #FFF;
  padding: 0 1.5em;
  box-sizing: border-box;
  display: none;
}
.playback .x-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}
.playback .playing {
  width: 17rem;
  max-width: 17rem;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.playback .playing .artists {
  font-size: 80%;
  color: #BCB382;
}
/* ... */

